<resources>
    <string name="app_name">I-Ching</string>
    <string name="brand_title">I CHING</string>
    <string name="splash_tagline">古老智慧 現代心境</string>
    <string name="onboarding_start">開始使用</string>
    <string name="onboarding_local_mode">以本機模式使用</string>
    <string name="onboarding_indicator">第 %1$d 頁，共 %2$d 頁</string>
    <string-array name="onboarding_page_titles">
        <item>每日靜心</item>
        <item>專注提問</item>
        <item>保存與回看</item>
    </string-array>
    <string-array name="onboarding_page_bodies">
        <item>每天用一卦，整理當下的心。</item>
        <item>把模糊的不安，轉化成可以思考的問題。</item>
        <item>記錄你的提問、選擇與後來的答案。</item>
    </string-array>
    <string name="local_entry_title">本機模式</string>
    <string name="local_entry_subtitle">不建立帳號，資料只保存在這台裝置。</string>
    <string name="local_entry_body">目前內測版的登入與註冊只建立本機帳號，不啟用同步或雲端備份。占卜問題、筆記與紀錄會依 Guest 或本機帳號分開保存在這台裝置；之後可在「我的」匯出 JSON 或純文字，也可以刪除目前帳號的紀錄。</string>
    <string name="local_entry_primary">進入本機模式</string>
    <string name="local_entry_daily_preview">先看看每日靜心</string>
    <string name="auth_title">I CHING</string>
    <string name="auth_login_tab">登入</string>
    <string name="auth_register_tab">註冊</string>
    <string name="auth_email_label">電子郵件</string>
    <string name="auth_email_hint">輸入您的電子郵件</string>
    <string name="auth_password_label">密碼</string>
    <string name="auth_login_password_hint">輸入您的密碼</string>
    <string name="auth_register_password_hint">設定密碼</string>
    <string name="auth_confirm_label">確認密碼</string>
    <string name="auth_confirm_hint">再次輸入密碼</string>
    <string name="auth_login">登入</string>
    <string name="auth_register">註冊</string>
    <string name="auth_switch_register">建立本機帳號</string>
    <string name="auth_switch_login">返回登入</string>
    <string name="auth_skip">暫不登入，以本機模式使用</string>
    <string name="auth_local_note">帳號只存在此裝置；不啟用同步、email 驗證或雲端登入。</string>
    <string name="nav_back">返回</string>
    <string name="nav_menu">選單</string>
    <string name="nav_settings">設定</string>
    <string name="records_empty_title">你的占卜紀錄會出現在這裡</string>
    <string name="records_empty_body">靜心凝神，透過易經尋求指引，記錄下每一次的智慧對話。</string>
    <string name="records_empty_action">開始第一次占卜</string>
    <string name="records_search_hint">搜尋問題、筆記、卦名或標籤...</string>
    <string name="records_no_results">沒有符合的占卜紀錄</string>
    <string name="record_edit_note">編輯筆記</string>
    <string name="record_delete">刪除</string>
    <string name="record_note_hint">補充這次占卜的反思...</string>
    <string name="result_note_label">這個結果讓你想到什麼？</string>
    <string name="result_note_hint">寫下你的靈感或打算採取的行動...</string>
    <string name="result_save_new">儲存至紀錄</string>
    <string name="result_save_existing">更新紀錄筆記</string>
    <string name="result_share">分享啟示</string>
    <string name="settings_row_placeholder">未設定</string>
    <string name="daily_reflection_label">今日想問</string>
    <string name="daily_reflection_hint">例如：近期自我成長的重點</string>
    <string name="daily_cast">開始占卜</string>
    <string name="daily_records">查看過去紀錄</string>
    <string name="daily_learn">學習此卦</string>
    <string name="question_step">Step 1</string>
    <string name="question_title">你想問什麼？</string>
    <string name="question_body">試著問一個你真正想理解的情境。</string>
    <string name="question_hint">我目前在工作上最需要調整的是什麼？</string>
    <string name="question_presets_label">或選擇常見主題</string>
    <string name="question_next">確認提問</string>
    <string name="method_step">STEP 2 / 4</string>
    <string name="method_title">選擇占法</string>
    <string name="method_body">請選擇最適合當下心境的卜筮方式。不同的方式將引導出不同的沉浸體驗與變爻機率。</string>
    <string name="method_next">開始靜心</string>
    <string name="method_selected">已選擇</string>
    <string name="ritual_header">請深呼吸，將注意力放回你的問題。\n長按螢幕，直到光圈合一。</string>
    <string name="ritual_header_reduce_motion">請深呼吸，將注意力放回你的問題。\n輕觸螢幕，完成靜心。</string>
    <string name="ritual_focus_description">靜心光圈</string>
    <string name="ritual_skip">略過儀式</string>
    <string name="yarrow_title">蓍草十八變</string>
    <string name="yarrow_body">依序完成六爻，每爻三變。每一步都只處理當下這一變。</string>
    <string name="yarrow_next">完成此變</string>
    <string name="yarrow_quick">快速完成</string>
    <string name="daily_reminder_channel">每日靜心提醒</string>
    <string name="daily_reminder_title">今日一卦已準備好</string>
    <string name="daily_reminder_body">花一分鐘回到你的問題與節奏。</string>
    <string name="learn_title">六十四卦</string>
    <string name="learn_body">探索易經六十四卦的深層智慧，每一卦皆象徵自然與人生的變化規律。</string>
    <string name="learn_search_hint">搜尋卦名或關鍵字...</string>
    <string name="learn_no_results">沒有符合的卦象</string>
    <string name="hexagram_detail_composition">卦象組成</string>
    <string name="hexagram_detail_theme">主旨核心</string>
    <string name="hexagram_detail_situations">適宜情境</string>
    <string name="hexagram_detail_classical">《易經》原文</string>
    <string name="hexagram_detail_lines">六爻爻辭</string>
    <string name="hexagram_detail_modern">現代解析</string>
</resources>
